# apeex-framework

./: .gitignore  LECENSE  MANIFEST.in  README.md  diagram.uml  pyproject.toml
adapters/cli/: command_runner_adapter.py
adapters/config/: yaml_loader_adapter.py
adapters/container/: container_adapter.py
adapters/http/: http_kernel_adapter.py
adapters/orm/: orm_adapter.py
adapters/router/: router_adapter.py
apeex/bundle/: bundle_interface.py
apeex/bundles/: bundle.py
apeex/bundles/demo_bundle/: bundle.py
apeex/bundles/demo_bundle/controllers/: hello_controller.py
apeex/container/: __init__.py  container.py  container_interface.py  simple_container.py
apeex/examples/: run_example.py  services.py
apeex/http/: __init__.py  controller_resolver_interface.py  http_kernel.py  http_kernel_interface.py  kernel.py  request.py  router_interface.py  simple_controller_resolver.py
apeex/kernel/: core_kernel.py  kernel.py
apeex/orm/: __init__.py  mapper_registry_interface.py  orm_interface.py
bundles/app_bundle/: bundle.py
bundles/app_bundle/controllers/: product_controller.py
bundles/app_bundle/entities/: product.py
config/: bundles.yaml  services.py
scripts/: __init__.py  bootstrap.py  run_server.py
tests/: test_basic_imports.py  test_http_kernel.py
tests/container/: test_basic.py  test_example_bundle.py
tests/http/: test_exception.py  test_http_adapters.py  test_request.py  test_response.py  test_route.py  test_router.py
tests/kernel/: test_kernel.py
tests/orm/: test_orm_engine_interface.py
