[project]
name = "apeex"
version = "0.1.0"
description = "A modular, interface-driven web framework inspired by Symfony, built on top of FastAPI."
authors = [{ name = "Apeex Team" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.poetry]
packages = [{ include = "apeex" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"
pytest = "^8.3.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
